# jarvis-core

./: Cargo.toml
dashboard/: Cargo.toml  lib.rs
dashboard/UI/: index.html
dashboard/UI/css/: style.css
dashboard/UI/js/: calender.js  darksky.js
jarvis/dashboard/: Cargo.toml  main.py  main.rs
jarvis/dashboard/UI/: index.html
jarvis/dashboard/UI/css/: style.css
jarvis/dashboard/UI/examples/: calender.html
jarvis/dashboard/UI/js/: calender.js  config.js  darksky.js  main.js
jarvis/dashboard/src/: main.rs
jarvis_config/: Cargo.toml
jarvis_config/src/: lib.rs
jarvis_skills/: Cargo.toml
jarvis_skills/src/: lib.rs
jarvis_speech/: Cargo.toml
jarvis_speech/src/: lib.rs  mimic  wakework.rs
jarvis_ui/: Cargo.toml
jarvis_ui/src/: lib.rs
